[gd_scene load_steps=12 format=3 uid="uid://bx8mwn5j7d3vy"]

[ext_resource type="Script" uid="uid://c5hq37klhvuwt" path="res://scripts/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://dkp8qx6h2t7gv" path="res://scenes/game_board.tscn" id="2_board"]
[ext_resource type="PackedScene" uid="uid://daqkvnnq4iooa" path="res://scenes/world_map.tscn" id="3_world_map"]
[ext_resource type="Script" path="res://scripts/game_camera.gd" id="4_camera"]
[ext_resource type="PackedScene" uid="uid://cheat_menu_scene" path="res://scenes/cheat_menu.tscn" id="5_cheat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.95)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_primary"]
bg_color = Color(0.15, 0.87, 0.51, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_secondary"]
bg_color = Color(0.25, 0.25, 0.3, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_danger"]
bg_color = Color(0.9, 0.3, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_badge"]
bg_color = Color(0.15, 0.15, 0.2, 0.85)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
content_margin_left = 12.0
content_margin_top = 6.0
content_margin_right = 12.0
content_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_menu_button"]
bg_color = Color(0.2, 0.2, 0.25, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="GameWorld" type="Node2D" parent="."]

[node name="GameCamera" type="Camera2D" parent="GameWorld"]
position = Vector2(360, 640)
script = ExtResource("4_camera")

[node name="WorldMap" parent="GameWorld" instance=ExtResource("3_world_map")]
z_index = -10
position = Vector2(-24, 56)
scale = Vector2(1.5, 1.5)

[node name="GameBoard" parent="GameWorld" instance=ExtResource("2_board")]
position = Vector2(72, 220)

[node name="Background" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 10

[node name="UI" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_constants/separation = 8
alignment = 0

[node name="MenuButton" type="Button" parent="UILayer/UI/TopBar"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_menu_button")
theme_override_styles/hover = SubResource("StyleBoxFlat_menu_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_menu_button")
text = "="

[node name="StatsRow" type="HBoxContainer" parent="UILayer/UI/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
alignment = 1

[node name="ScoreContainer" type="PanelContainer" parent="UILayer/UI/TopBar/StatsRow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_badge")

[node name="HBox" type="HBoxContainer" parent="UILayer/UI/TopBar/StatsRow/ScoreContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="UILayer/UI/TopBar/StatsRow/ScoreContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 16
text = "★"

[node name="ScoreValue" type="Label" parent="UILayer/UI/TopBar/StatsRow/ScoreContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "0"

[node name="LevelContainer" type="PanelContainer" parent="UILayer/UI/TopBar/StatsRow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_badge")

[node name="HBox" type="HBoxContainer" parent="UILayer/UI/TopBar/StatsRow/LevelContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="UILayer/UI/TopBar/StatsRow/LevelContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.27, 0.67, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "Lv"

[node name="LevelValue" type="Label" parent="UILayer/UI/TopBar/StatsRow/LevelContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "1"

[node name="MovesContainer" type="PanelContainer" parent="UILayer/UI/TopBar/StatsRow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_badge")

[node name="HBox" type="HBoxContainer" parent="UILayer/UI/TopBar/StatsRow/MovesContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="UILayer/UI/TopBar/StatsRow/MovesContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.87, 0.51, 1)
theme_override_font_sizes/font_size = 16
text = "▶"

[node name="MovesValue" type="Label" parent="UILayer/UI/TopBar/StatsRow/MovesContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
text = "30"

[node name="SecondRow" type="HBoxContainer" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 64.0
offset_right = -12.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_constants/separation = 8
alignment = 1

[node name="HighscoreContainer" type="PanelContainer" parent="UILayer/UI/SecondRow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_badge")

[node name="HBox" type="HBoxContainer" parent="UILayer/UI/SecondRow/HighscoreContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="UILayer/UI/SecondRow/HighscoreContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.65, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "Best"

[node name="HighscoreValue" type="Label" parent="UILayer/UI/SecondRow/HighscoreContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.65, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "0"

[node name="TargetContainer" type="PanelContainer" parent="UILayer/UI/SecondRow"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_badge")

[node name="HBox" type="HBoxContainer" parent="UILayer/UI/SecondRow/TargetContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="UILayer/UI/SecondRow/TargetContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.27, 0.67, 0.95, 1)
theme_override_font_sizes/font_size = 14
text = "Ziel"

[node name="TargetValue" type="Label" parent="UILayer/UI/SecondRow/TargetContainer/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.27, 0.67, 0.95, 1)
theme_override_font_sizes/font_size = 16
text = "1000"

[node name="ComboDisplay" type="Label" parent="UILayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 42
text = "3x COMBO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCompletePanel" type="Panel" parent="UILayer/UI"]
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -140.0
offset_right = 160.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/UI/LevelCompletePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="UILayer/UI/LevelCompletePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.15, 0.87, 0.51, 1)
theme_override_font_sizes/font_size = 32
text = "GESCHAFFT!"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="UILayer/UI/LevelCompletePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="UILayer/UI/LevelCompletePanel/VBoxContainer"]
custom_minimum_size = Vector2(140, 48)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button_primary")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_primary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_primary")
text = "WEITER"

[node name="GameOverPanel" type="Panel" parent="UILayer/UI"]
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -140.0
offset_right = 160.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="UILayer/UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 32
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="UILayer/UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "0"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="UILayer/UI/GameOverPanel/VBoxContainer"]
custom_minimum_size = Vector2(140, 48)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_button_danger")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_danger")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_danger")
text = "NOCHMAL"

[node name="BottomButtons" type="HBoxContainer" parent="UILayer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -70.0
offset_right = 180.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 1

[node name="NewGameButton" type="Button" parent="UILayer/BottomButtons"]
custom_minimum_size = Vector2(100, 48)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_danger")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_danger")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_danger")
text = "NEU"

[node name="ShuffleButton" type="Button" parent="UILayer/BottomButtons"]
custom_minimum_size = Vector2(120, 48)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_button_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_secondary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_secondary")
text = "MISCHEN"

[node name="CheatButton" type="Button" parent="UILayer/BottomButtons"]
custom_minimum_size = Vector2(80, 48)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button_secondary")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_secondary")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_secondary")
text = "DEV"

[node name="CheatMenu" parent="UILayer" instance=ExtResource("5_cheat")]
visible = false
z_index = 200

[connection signal="pressed" from="UILayer/UI/LevelCompletePanel/VBoxContainer/NextButton" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="UILayer/UI/GameOverPanel/VBoxContainer/RetryButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UILayer/BottomButtons/NewGameButton" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="UILayer/BottomButtons/ShuffleButton" to="." method="_on_shuffle_pressed"]
[connection signal="pressed" from="UILayer/BottomButtons/CheatButton" to="." method="_on_cheat_pressed"]
[connection signal="closed" from="UILayer/CheatMenu" to="." method="_on_cheat_menu_closed"]
[connection signal="spawn_mode_changed" from="UILayer/CheatMenu" to="." method="_on_spawn_mode_changed"]
